package com.lld.problems.snakeandladder.code.constants;

public enum PlayerIndicator {
    HUMAN,
    BOT
}
