@startuml

    class SnakeAndLadderGame {
        -players: List~Player~
        -playerFactory: PlayerFactory
        -turnManager: TurnManager
        -board: Board
        +SnakeAndLadderGame(playerInfos: List~PlayerInfo~)
        +start() void
        +end(winner: Player) void
    }

    class PlayerInfo {
        -playerName: String
        -playerIndicator: PlayerIndicator
        +getPlayerName() String
        +getPlayerIndicator() PlayerIndicator
    }

    class PlayerFactory {
        +createPlayer(indicator: PlayerIndicator, playerName: String) Player
    }

    class Player {
        <<abstract>>
        -playerName: String
        -pawn: Pawn
        -dice: Dice
        +chance(board: Board) void
        +rollDice()* int
        +moveToCell(position: int) void
        +getPawn() Pawn
        +getPlayerName() String
    }

    class HumanPlayer {
        -scanner: Scanner
        +rollDice() int
    }
    class BotPlayer {
        +rollDice() int
    }

    class Dice {
        +roll() int
    }

    class Board {
        -jumps: List~Jump~
        -players: List~Player~
        +getFinalPosition(currentPosition: int, steps: int) int
        +generateJumps() void
        +notifyPlayers(currPlayer: Player) void
        +checkWin(pawn: Pawn) boolean
        +registerPlayer(player: Player) void
    }

    class TurnManager {
        -currentPlayer: Player
        -players: List~Player~
        +getNextPlayer() Player
    }

    class Jump {
        -start: int
        -end: int
        +isSnake() boolean
        +isLadder() boolean
    }

    class Pawn {
        -currentPosition: int
        +updatePosition(position: int) void
        +getCurrentPosition() int
    }

    class PlayerIndicator {
        <<enumeration>>
        HUMAN
        BOT
    }

    SnakeAndLadderGame --> PlayerFactory
    SnakeAndLadderGame ..> PlayerInfo
    SnakeAndLadderGame *-- TurnManager
    SnakeAndLadderGame o-- Player
    SnakeAndLadderGame *-- Board
    PlayerFactory ..> Player
    PlayerFactory ..> PlayerIndicator
    PlayerInfo ..> PlayerIndicator
    HumanPlayer --|> Player
    BotPlayer --|> Player
    Board *-- Jump
    Board o-- Player
    TurnManager o-- Player
    Player --> Dice
    Player *-- Pawn
    Player ..> Board
    
@enduml